--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   dio: ^3.0.9
+  provider: ^4.1.2
+  flutter_easyloading: ^1.1.3
+  json_annotation: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^1.10.0
+  json_serializable:  ^3.3.0
+  json_to_model: ^1.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
